--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "client_lib"
+name = "client-lib"
 version = "0.1.0"
 edition = "2024"
 
@@ -15,5 +15,5 @@ async-stream = "0.3.6"
 once_cell = "1.21.3"
 toml = "0.8.23"
 reqwest = { version = "0.12.20", features = ["json"] }
-shared_lib = { path = "../shared_lib" }
+shared-lib = { path = "../shared-lib" }
 
