--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "nultr-client-lib"
 version = "0.1.0"
 edition = "2024"
+license = "GPL-3.0-or-later"
+license-file = "LICENSE"
 
 [dependencies]
 futures = "0.3.31"
