--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ once_cell = "1.21.3"
 toml = "0.8.23"
 reqwest = { version = "0.12.20", features = ["json"] }
 nultr-shared-lib = { path = "../shared-lib" }
-rust-api-integrator = { path = "../rust-api-integrator", features = [] }
+rust-api-kit = { path = "../rust-api-kit", features = [] }
 async-stream = "0.3.6"
 
 [features]
