readme update, dependency update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ once_cell = "1.21.3"
 toml = "0.8.23"
 reqwest = { version = "0.12.20", features = ["json"] }
 nultr-shared-lib = { path = "../shared-lib" }
-rust-api-kit = { path = "../rust-api-kit", features = [] }
+rust-api-kit = "0.1.1"
 async-stream = "0.3.6"
 uuid = { version = "1.17.0", features = ["v4", "serde"] }
 
