--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,6 @@ uuid = { version = "1.17.0", features = ["v4", "serde"] }
 
 [features]
 default = ["iced-integration"]
-dioxus-integration = []
-iced-integration = []
+dioxus = []
+iced = []
 
