--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ async-stream = "0.3.6"
 uuid = { version = "1.17.0", features = ["v4", "serde"] }
 
 [features]
-default = ["iced-integration"]
+default = ["iced"]
 dioxus = []
 iced = []
 
